2008-10-26  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/applet-device-cdma.c
	  src/connection-editor/nm-connection-list.c
	  src/connection-editor/page-mobile.c
		- Use cdma setting accessors

2008-10-26  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/applet-device-wired.c
	  src/connection-editor/page-dsl.c
		- Use pppoe setting accessors

2008-10-26  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/connection-editor/ce-page.c
	  src/connection-editor/ce-page.h
	  src/connection-editor/page-wired.c
	  src/utils/utils.c
		- Use wired setting accessors

2008-10-26  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/connection-editor/nm-connection-list.c
		- Use setting object accessors

2008-10-24  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
	  src/connection-editor/nm-connection-editor.glade
		- Improve PolicyKit auth to only ask once, and to sensitize/desensitize
			the dialog dynamically based on what the user can and cannot do for
			the given connection scope

2008-10-23  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
		- (create_new_connection_for_type): set initial connection scope

	* src/connection-editor/nm-connection-editor.h
		- Change the editor window from a dialog to a window to allow the
			action area to be more fully customized; move the system settting
			checkbox down there

	* src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
		- (nm_connection_editor_init): hook the system connection checkbox up
			to PolicyKit authorizations
		- (populate_connection_ui): set the system connection checkbox elsewhere
		- (nm_connection_editor_set_connection): set initial value of system